# GLGI

./: .gitignore  .gitmodules  GLGI.sln  Project2.sln  README.md  UpgradeLog2.htm
GLGIShadowTest1/: CMakeLists.txt  GLGIShadowTest1.cpp  GLGIShadowTest1.vcxproj.filters
GLGIShadowTest1/lib/: GLGI_64.lib
GLGIShadowTest1/resources/: sphere.mtl
GLGIShadowTest1/resources/shaders/: shadow.vert  simple - Copy.frag
windows/GLGI/: CMakeLists.txt  GLGI.sln  UpgradeLog.htm
windows/GLGI/Debug/: GLGI.exp  GLGI.ilk  GLGI.lib  GLGITest1.ilk
windows/GLGI/GLGI/: Camera.cpp  Defines.h  GLGI.cpp  GLGI.h  GLGI.vcxproj  GLGI.vcxproj.filters  InputManager.cpp  Mesh.cpp  Object.cpp  PackedVertex.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  StandardShading.fragmentshader  Util.h  Window.cpp  quaternion_utils.cpp  tangentspace.cpp  texture.cpp  triangles.vert
windows/GLGI/GLGI/Debug/: glgi.new.obj.enc  inputmanager.obj.enc  object.obj.enc  scene.new.obj.enc  vc141.idb
windows/GLGI/GLGI/Debug/GLGI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLGI.write.1u.tlog  link.11512.delete.1.tlog  link.13012.delete.1.tlog  link.13372.delete.1.tlog  link.13560.delete.1.tlog  link.13652.delete.1.tlog  link.1692.delete.1.tlog  link.2592.delete.1.tlog  link.2728.delete.1.tlog  link.4508.delete.1.tlog  link.4952.delete.1.tlog  link.6988.delete.1.tlog  link.7488.delete.1.tlog  link.9424.delete.1.tlog  link.9800.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
windows/GLGI/GLGI/Release/GLGI.tlog/: CL.command.1.tlog  link.write.1.tlog
windows/GLGI/GLGILightTest1/: CMakeLists.txt  GLGILightTest1.cpp  GLGILightTest1.vcxproj.filters
windows/GLGI/GLGILightTest1/resources/: suzanne.mtl
windows/GLGI/GLGIShadowTest1/: CMakeLists.txt  GLGIShadowTest1.cpp  GLGIShadowTest1.vcxproj
windows/GLGI/GLGIShadowTest1/dll/Win32/: visualinfo.txt
windows/GLGI/GLGITest1/: GLGITest1.cpp  GLGITest1.vcxproj  GLGITest1.vcxproj.filters  StandardShading.fragmentshader  triangles.vert
windows/GLGI/GLGITest1/Debug/: glgitest1.new.obj.enc  glgitest1.obj.enc  vc141.idb
windows/GLGI/GLGITest1/Debug/GLGITest1.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
windows/GLGI/GLGI_64/: CMakeLists.txt  GLGI.cpp  GLGI.h  GLGI.vcxproj  GLGI.vcxproj.filters  Mesh.cpp  Object.cpp  Renderer.cpp  ResourceManager.cpp  StandardShading.vertexshader  Tiny_obj_loader.cpp  Util.cpp  Window.cpp  lodepng.cpp  objloader.cpp  shader.cpp  text2D.cpp  vboindexer.cpp
windows/GLGI/GLGI_64/Debug/: vc141.idb
windows/GLGI/GLGI_64/MSVCheaders/: GLGI.h
windows/GLGI/GLGI_64/UNIXheaders/: GLGI.h
windows/GLGI/GLGI_64/src/: Camera.cpp  GLGI.cpp  InputManager.cpp  Light.cpp  Material.cpp  Object.cpp  PackedVertex.cpp  ResourceManager.cpp  Scene.cpp  Tiny_obj_loader.cpp  Window.cpp  controls.cpp  lodepng.cpp  objloader.cpp  shader.cpp  texture.cpp  vboindexer.cpp
windows/GLGI/GLGI_64/winsrc/: objloader.cpp
windows/GLGI/Release/: GLGI.exp  GLGI.iobj  GLGI.ipdb  GLGI.lib
windows/GLGI/SetupWizard/: SetupWizard.vdproj
windows/GLGI/SetupWizard/Debug/: SetupWizard.msi
windows/GLGI/resources/: StandardShading.vertexshader
(+108 files in other folders)
