cmake_minimum_required (VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
project (GLGIShadowTest1)
file(GLOB files ${PROJECT_SOURCE_DIR}/resources/*)
list(LENGTH files len)
message (STATUS "${files} length= ${len}")
while(len)
	list(GET files 0 file)
	list(REMOVE_AT files 0 file)
	#get_filename_component(FNAME ${file} NAME)
	string(REPLACE "${PROJECT_SOURCE_DIR}/resources/" "${CMAKE_BINARY_DIR}/bin/resources/" FNAME ${file})
	message (STATUS "${file} ${FNAME}")
	if(IS_DIRECTORY ${file})
		file(GLOB add ${file}/*)
		foreach(a ${add})
			list(APPEND files ${a})
			message (STATUS ${files})
		endforeach()
	else()
		configure_file("${file}" "${FNAME}" COPYONLY)
	endif()
	list(LENGTH files len)
endwhile()
file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/GLGIShadowTest1.cpp)
#file(GLOB INCLUDES ${PROJECT_VERSION}/includes/*)
file(GLOB GENHEADERS ${PROJECT_SOURCE_DIR}/headers/*.h)

include_directories( ${CMAKE_SOURCE_DIR}/GLGI_64/headers)

include_directories( ${CMAKE_SOURCE_DIR}/GLGI_64/include)
#add_subdirectory(${CMAKE_SOURCE_DIR}/GLGI_64/ ${CMAKE_SOURCE_DIR}/GLGI_64/build/lib/)
link_libraries(GLGI glew glfw)
add_executable(GLGIShadowTest1 ${GENHEADERS} ${HEADERS} ${SOURCES} )

